# flutter_nfc_kit

./: .gitignore  .metadata  pubspec.yaml
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/Classes/: FlutterNfcKitPlugin.swift
lib/: flutter_nfc_kit_method_channel.dart  flutter_nfc_kit_platform_interface.dart
linux/: CMakeLists.txt  flutter_nfc_kit_plugin.cc  flutter_nfc_kit_plugin_private.h  pcsc-interface
linux/include/flutter_nfc_kit/: flutter_nfc_kit_plugin.h
linux/test/: flutter_nfc_kit_plugin_test.cc
pcsc-interface/: CMakeLists.txt  README.md
pcsc-interface/cmake/: FindPCSCLite.cmake
pcsc-interface/include/: pcsc-interface.h
pcsc-interface/src/: pcsc-interface.cc
test/: flutter_nfc_kit_method_channel_test.dart  flutter_nfc_kit_test.dart
windows/: CMakeLists.txt  flutter_nfc_kit_plugin.cpp  flutter_nfc_kit_plugin.h  flutter_nfc_kit_plugin_c_api.cpp  pcsc-interface
windows/include/flutter_nfc_kit/: flutter_nfc_kit_plugin_c_api.h
windows/test/: flutter_nfc_kit_plugin_test.cpp
